108minutes.net/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website-108minutes
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: website-108minutes
  replicas : 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: website-108minutes
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
      - image: ghost:1.22.1
        name: ghost-108minutes
        ports:
        - containerPort: 2368
        volumeMounts:
        - name: 108minutes-content
          mountPath: /var/lib/ghost/content
        - name: 108minutes-config
          mountPath: /var/lib/ghost/config.production.json
          subPath: config.production.json
      volumes:
      - name: 108minutes-content
        persistentVolumeClaim:
          claimName: 108minutes-content
      # kubectl create configmap 108minutes-config --from-file=config.json
      - name: 108minutes-config
        configMap:
          name: 108minutes-config
          items:
          - key: config.json
            path: config.production.json
