108minutes.net/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-108minutes
  namespace: ingress-nginx
  labels:
    app: website-108minutes
spec:
  ports:
  - name: server
    port: 80
    targetPort: 2368
  selector:
    app: website-108minutes
