108minutes.net/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-108minutes
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
    - host: "108minutes.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: website-108minutes
              servicePort: 80
          - path: /static
            backend:
              serviceName: static-web
              servicePort: 80
          - path: /.well-known
            backend:
              serviceName: static-web
              servicePort: 80
